--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,17 +16,18 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: actions/setup-node@v4
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 10
+      - name: Install Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: "20"
           cache: pnpm
           registry-url: "https://registry.npmjs.org"
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8
       - name: Install dependencies
         run: pnpm install
       - name: Semantic Release
