--- a/package.json
+++ b/package.json
@@ -36,5 +36,6 @@
     "@semantic-release/github": "^11.0.2",
     "@semantic-release/npm": "^12.0.1",
     "semantic-release": "^24.2.3"
-  }
+  },
+  "packageManager": "pnpm@9.15.9+sha512.68046141893c66fad01c079231128e9afb89ef87e2691d69e4d40eee228988295fd4682181bae55b58418c3a253bde65a505ec7c5f9403ece5cc3cd37dcf2531"
 }
